cabal-version: 2.4
name:          backend
version:       0.1
build-type:    Simple

library
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    StrictData
    TypeApplications
    TypeFamilies
    UndecidableInstances

  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-all-missed-specialisations
    -Wno-implicit-prelude -Wno-missed-specialisations
    -Wno-monomorphism-restriction -Wno-partial-fields
    -Wno-missing-import-lists -Wno-orphans -Wcompat

  mixins:             base hiding (Prelude)
  hs-source-dirs:     src

  if impl(ghcjs -any)
    buildable: False

  build-depends:
    , aeson
    , async
    , base
    , common
    , frontend
    , network-simple
    , obelisk-backend
    , obelisk-route
    , snap-core
    , stm
    , taskwarrior
    , websockets
    , websockets-snap

  exposed-modules:    Backend
  default-language:   Haskell2010

executable backend
  main-is:          main.hs
  hs-source-dirs:   src-bin

  if impl(ghcjs -any)
    buildable: False

  build-depends:
    , backend
    , base
    , common
    , frontend
    , obelisk-backend

  mixins:           base hiding (Prelude)
  default-language: Haskell2010
