cabal-version: 2.4
name:          common
version:       0.1
build-type:    Simple

library
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances

  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-all-missed-specialisations
    -Wno-implicit-prelude -Wno-missed-specialisations
    -Wno-monomorphism-restriction -Wno-partial-fields
    -Wno-missing-import-lists -Wno-orphans -Wcompat

  hs-source-dirs:     src
  build-depends:
    , aeson
    , async
    , base
    , extra
    , generic-optics
    , mtl
    , obelisk-route
    , optics
    , optics-th
    , password              >=2.0.1.0
    , relude
    , string-interpolate
    , taskwarrior
    , template-haskell
    , text
    , these
    , time
    , unordered-containers
    , uuid
    , patch
    , co-log
    , vector
    , reflex
    , chronos
    , containers
    , dhall

  exposed-modules:
    Common.Api
    Common.Route
    Common.Debug
    Common.Config
    Prelude

  default-language:   Haskell2010
  mixins:             base hiding (Prelude)
