cabal-version: 2.4
name:          frontend
version:       0.1
build-type:    Simple

library
  hs-source-dirs:     src
  build-depends:
    , aeson
    , base
    , clay
    , common
    , dependent-map
    , dependent-sum-template
    , extra
    , generic-optics
    , jsaddle
    , mtl
    , obelisk-executable-config-lookup
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , optics
    , optics-th
    , reflex
    , reflex-dom
    , relude
    , scientific
    , string-interpolate
    , taskwarrior
    , text
    , these
    , time
    , unordered-containers
    , uuid

  exposed-modules:
    Frontend
    Frontend.Css
    Frontend.MainWidget
    Frontend.State
    Frontend.Types

  other-modules:
    Frontend.BaseWidgets
    Frontend.DragAndDrop
    Frontend.ListWidget
    Frontend.Sorting
    Frontend.TaskWidget
    Frontend.TextEditWidget
    Frontend.TimeWidgets
    Frontend.Util

  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PatternGuards
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-all-missed-specialisations
    -Wno-implicit-prelude -Wno-missed-specialisations
    -Wno-monomorphism-restriction -Wno-partial-fields
    -Wno-missing-import-lists -Wno-orphans -Wcompat

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010

executable frontend
  main-is:          main.hs
  hs-source-dirs:   src-bin
  build-depends:
    , base
    , common
    , frontend
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , reflex-dom

  ghc-options:      -threaded
  mixins:           base hiding (Prelude)
  default-language: Haskell2010
