cabal-version:      2.4
name:               kassandra
version:            0.1.0.0

-- BEGIN dhall generated common configuration
license-file:       LICENSE
author:             Malte Brandy
maintainer:         malte.brandy@maralorn.de
build-type:         Simple
extra-source-files: CHANGELOG.md

common common-config
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-all-missed-specialisations
    -Wno-implicit-prelude -Wno-missed-specialisations
    -Wno-monomorphism-restriction -Wno-partial-fields
    -Wno-missing-import-lists -Wno-orphans -Wcompat

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010

-- END dhall generated common configuration


library
  import:          common-config
  exposed-modules:
    Kassandra.Api
    Kassandra.Config
    Kassandra.Css
    Kassandra.Debug
    Kassandra.MainWidget
    Kassandra.State
    Kassandra.Types
    Prelude

  other-modules:
    Kassandra.BaseWidgets
    Kassandra.DragAndDrop
    Kassandra.ListWidget
    Kassandra.ReflexUtil
    Kassandra.Sorting
    Kassandra.TaskWidget
    Kassandra.TextEditWidget
    Kassandra.TimeWidgets
    Kassandra.Util

  build-depends:
    , aeson
    , ansi-terminal
    , async
    , base
    , clay
    , containers
    , dependent-map
    , dependent-sum-template
    , extra
    , generic-optics
    , jsaddle
    , mtl
    , optics
    , optics-th
    , password
    , patch
    , reflex
    , reflex-dom
    , relude
    , scientific
    , string-interpolate
    , taskwarrior
    , template-haskell
    , text
    , these
    , time
    , unordered-containers
    , uuid

  hs-source-dirs:  src
