cabal-version:      2.4
name:               kassandra
version:            0.1.0.0

-- BEGIN dhall generated common configuration
-- generate with: dhall text --file common-config.dhall
license-file:       LICENSE
author:             Malte Brandy
maintainer:         malte.brandy@maralorn.de
build-type:         Simple
extra-source-files: CHANGELOG.md

common common-config
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wno-orphans -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wmissing-export-lists -Widentities
    -Wredundant-constraints -Wmissing-home-modules

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010

-- END dhall generated common configuration


library
  import:          common-config
  exposed-modules:
    Kassandra.Api
    Kassandra.Calendar
    Kassandra.Config
    Kassandra.Css
    Kassandra.Debug
    Kassandra.LocalBackend
    Kassandra.LocalBackendWidget
    Kassandra.MainWidget
    Kassandra.RemoteBackendWidget
    Kassandra.SelectorWidget
    Kassandra.State
    Kassandra.Types
    Kassandra.Util
    Prelude

  other-modules:
    Kassandra.AgendaWidget
    Kassandra.LogWidget
    Kassandra.BaseWidgets
    Kassandra.DragAndDrop
    Kassandra.ListWidget
    Kassandra.ReflexUtil
    Kassandra.Sorting
    Kassandra.TaskWidget
    Kassandra.TextEditWidget
    Kassandra.TimeWidgets

  build-depends:
    , aeson
    , ansi-terminal
    , async
    , base
    , clay
    , containers
    , data-default-class
    , dependent-map
    , dependent-sum-template
    , extra
    , generic-optics
    , jsaddle
    , jsaddle-dom
    , mtl
    , optics
    , optics-th
    , password
    , patch
    , pretty-simple
    , process
    , reflex
    , reflex-dom
    , relude
    , scientific
    , stm
    , string-interpolate
    , taskwarrior
    , template-haskell
    , text
    , these
    , time
    , unordered-containers
    , uuid
    , witherable

  hs-source-dirs:  src
