cabal-version:      2.4
name:               kassandra
version:            0.1.0.0

-- BEGIN dhall generated common configuration
-- generate with: dhall text --file common-config.dhall
license-file:       LICENSE
author:             Malte Brandy
maintainer:         malte.brandy@maralorn.de
build-type:         Simple
extra-source-files: CHANGELOG.md

common common-config
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wno-orphans -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wmissing-export-lists -Widentities
    -Wredundant-constraints -Wmissing-home-modules

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010

-- END dhall generated common configuration


library
  import:          common-config
  exposed-modules:
    Kassandra.Api
    Kassandra.Calendar
    Kassandra.Config
    Kassandra.Css
    Kassandra.Debug
    Kassandra.LocalBackend
    Kassandra.LocalBackendWidget
    Kassandra.MainWidget
    Kassandra.RemoteBackendWidget
    Kassandra.SelectorWidget
    Kassandra.State
    Kassandra.Types
    Kassandra.Util
    Prelude

  other-modules:
    Kassandra.AgendaWidget
    Kassandra.BaseWidgets
    Kassandra.DragAndDrop
    Kassandra.ListElementWidget
    Kassandra.ListWidget
    Kassandra.LogWidget
    Kassandra.ReflexUtil
    Kassandra.Sorting
    Kassandra.TaskWidget
    Kassandra.TextEditWidget
    Kassandra.TimeWidgets

  build-depends:
    , aeson
    , ansi-terminal
    , async
    , base
    , clay
    , containers
    , data-default-class
    , extra
    , generic-optics
    , jsaddle
    , jsaddle-dom
    , nonempty-containers
    , optics
    , optics-th
    , password
    , patch
    , process
    , reflex
    , reflex-dom
    , relude
    , say
    , scientific
    , stm
    , string-interpolate
    , taskwarrior
    , template-haskell
    , text
    , these
    , time
    , unordered-containers
    , uuid
    , witherable

  hs-source-dirs:  src
