cabal-version:      2.4
name:               standalone
version:            0.1.0.0

-- BEGIN dhall generated common configuration
license-file:       LICENSE
author:             Malte Brandy
maintainer:         malte.brandy@maralorn.de
build-type:         Simple
extra-source-files: CHANGELOG.md

common common-config
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-all-missed-specialisations
    -Wno-implicit-prelude -Wno-missed-specialisations
    -Wno-monomorphism-restriction -Wno-partial-fields
    -Wno-missing-import-lists -Wno-orphans -Wcompat

  default-language:   Haskell2010

-- END dhall generated common configuration


library
  import:          common-config
  hs-source-dirs:  src
  exposed-modules:
    Kassandra.Config.Dhall
    Kassandra.Standalone
    Kassandra.Standalone.Config
    Kassandra.Standalone.State

  build-depends:
    , aeson
    , base
    , dependent-map
    , dependent-sum-template
    , dhall
    , kassandra
    , network-simple
    , reflex
    , reflex-dom
    , taskwarrior
    , unordered-containers
    , password         >=2.0.1.0
    , uuid
    , either

  hs-source-dirs:  src
  mixins:             base hiding (Prelude)

executable kassandra2
  import:         common-config
  main-is:        main.hs
  hs-source-dirs: src-bin
  build-depends:
    , base
    , standalone

  ghc-options:    -threaded
