cabal-version:      2.4
name:               standalone
version:            0.1.0.0

-- BEGIN dhall generated common configuration
-- generate with: dhall text --file common-config.dhall
license-file:       LICENSE
author:             Malte Brandy
maintainer:         malte.brandy@maralorn.de
build-type:         Simple
extra-source-files: CHANGELOG.md

common common-config
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    UndecidableInstances
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Wno-orphans
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-export-lists
    -Widentities
    -Wredundant-constraints
    -Wmissing-home-modules
  mixins:             base hiding (Prelude)
  default-language:   Haskell2010
-- END dhall generated common configuration


library
  import:          common-config
  hs-source-dirs:  src
  exposed-modules:
    Kassandra.Config.Dhall
    Kassandra.Standalone
    Kassandra.Standalone.Config
    Kassandra.Standalone.State

  build-depends:
    , aeson
    , async
    , base
    , dependent-map
    , dependent-sum-template
    , paths
    , dhall
    , kassandra
    , network-simple
    , reflex
    , reflex-dom
    , stm
    , taskwarrior
    , unordered-containers
    , password         >=2.0.1.0
    , uuid
    , either
    , relude

  hs-source-dirs:  src

executable kassandra2
  import:         common-config
  main-is:        main.hs
  hs-source-dirs: src-bin
  build-depends:
    , base
    , kassandra
    , standalone

  ghc-options:    -threaded
