cabal-version:      2.4
name:               backend
version:            0.1

-- BEGIN dhall generated common configuration
license-file:       LICENSE
author:             Malte Brandy
maintainer:         malte.brandy@maralorn.de
build-type:         Simple
extra-source-files: CHANGELOG.md

common common-config
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-all-missed-specialisations
    -Wno-implicit-prelude -Wno-missed-specialisations
    -Wno-monomorphism-restriction -Wno-partial-fields
    -Wno-missing-import-lists -Wno-orphans -Wcompat

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010

-- END dhall generated common configuration


library
  import:          common-config
  hs-source-dirs:  src

  if impl(ghcjs -any)
    buildable: False

  build-depends:
    , aeson
    , async
    , base
    , containers
    , dhall
    , data-default-class
    , frontend
    , say
    , kassandra
    , network-simple
    , obelisk-backend
    , obelisk-route
    , password         >=2.0.1.0
    , relude
    , snap-core
    , standalone
    , stm
    , taskwarrior
    , uuid
    , websockets
    , websockets-snap

  exposed-modules:
    Backend
    Backend.Config

executable backend
  import:         common-config
  main-is:        main.hs
  hs-source-dirs: src-bin

  if impl(ghcjs -any)
    buildable: False

  build-depends:
    , backend
    , base
    , frontend
    , kassandra
    , obelisk-backend

  ghc-options:    -threaded
