cabal-version:      2.4
name:               frontend
version:            0.1

-- BEGIN dhall generated common configuration
license-file:       LICENSE
author:             Malte Brandy
maintainer:         malte.brandy@maralorn.de
build-type:         Simple
extra-source-files: CHANGELOG.md

common common-config
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-all-missed-specialisations
    -Wno-implicit-prelude -Wno-missed-specialisations
    -Wno-monomorphism-restriction -Wno-partial-fields
    -Wno-missing-import-lists -Wno-orphans -Wcompat

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010

-- END dhall generated common configuration


library
  import:          common-config
  hs-source-dirs:  src
  build-depends:
    , aeson
    , base
    , dependent-map
    , dependent-sum-template
    , extra
    , generic-optics
    , jsaddle
    , kassandra
    , mtl
    , obelisk-executable-config-lookup
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , optics
    , optics-th
    , reflex
    , reflex-dom
    , scientific
    , taskwarrior
    , text
    , these
    , time
    , unordered-containers
    , uuid
    , relude

  exposed-modules:
    Frontend
    Frontend.Route

executable frontend
  import:         common-config
  main-is:        main.hs
  hs-source-dirs: src-bin
  build-depends:
    , base
    , frontend
    , kassandra
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , reflex-dom

  ghc-options:    -threaded
  mixins:             base hiding (Prelude)
